[package]
name = "client-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# ── 工作区内部依赖 ──
actinium-core = { path = "../core" }

# ── CLI 框架 ──
clap = { version = "4", features = ["derive"] }

# ── HTTP 客户端 ──
reqwest = { version = "0.12", features = ["blocking", "json"] }

# ── 序列化 ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── 工具 ──
hex = "0.4"
chrono = "0.4"
sha2 = "0.10"
