[package]
name = "actinium-core"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core", "zeroize"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
