[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
# ── 工作区内部依赖 ──
actinium-core = { path = "../core" }

# ── DHT 网络 ──
mainline = "6"

# ── Web 框架 (异步) ──
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# ── 本地缓存 ──
rusqlite = { version = "0.34", features = ["bundled"] }

# ── 序列化 ──
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2"

# ── 日志 ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── 工具 ──
hex = "0.4"
thiserror = "1"
chrono = "0.4"
sha2 = "0.10"
reqwest = { version = "0.13.2", features = ["json"] }
